--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,6 @@ build-backend = "hatchling.build"
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
+    "black>=24.1.1",
+    "flake8>=7.0.0"
 ]
