--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,11 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
 
+      - name: Run black
+        run: uv run black src tests --check
+
+      - name: Run flake8
+        run: uv run flake8 src tests
+
       - name: Run tests
         run: uv run pytest tests
